﻿更新履歴

==== Ver 1.1.2-beta1(2013/xx/xx)

==== Ver 1.1.1(2013/06/11)
 * 当バージョンから Twitter API v1.1 に対応しています
 * 旧 API v1 は太平洋標準時の 6/11 (Wed) に廃止される予定であると Twitter 社が予告しています
 * API v1.1 の使用に不都合がある場合は、ステータスバーのレートリミット表示をクリックすることで API v1 と切り替えることができます。

 * NEW: API v1.1 に対応
 * NEW: サムネイル画像表示の右クリックメニューにGoogle画像検索を開くための項目を追加 (thx @moccos!)
 * FIX: 画像投稿画面をキャンセルした場合にタイムライン表示に復帰できない不具合を修正 (thx @polka_roco_!)

==== Ver 1.1.0(2013/05/15)
 * NEW: タブの表示位置を画面上部に変更可能に (thx @aokomoriuta!)
 * NEW: mobile.twitter.com/<スクリーン名>/status/<ステータスID> のURLも関連発言表示の対象に追加
 * NEW: Favstarなどサードパーティ製サービスのパーマリンクURLも関連発言表示の対象に追加
 * CHG: エラーログの出力先を変更 (OpenTween.exe と同じ場所に ErrorLogs フォルダが作成されます)
 * FIX: スペースが含まれているURLをブラウザで開こうとするとURLが分断されて複数のタブが開いてしまう問題を修正 (thx @5px!)
 * FIX: 画面更新時にInvalidOperationExceptionのエラーが発生する不具合を修正
 * FIX: 関連発言表示が非公開アカウントのツイートに対して機能しない問題を修正
 * FIX: 言語設定が英語の状態でリスト管理の画面が翻訳されずに表示される問題を修正

==== Ver 1.0.9(2013/04/07)
 * CHG: APIレートリミット関連の実装を修正
 * FIX: アイコンキャッシュの破棄時にエラーが出ることがある問題を修正
 * FIX: UserStreamsのunfollowイベントでエラーが起きていたのを修正
 * FIX: プロフィール画像・サムネイルの表示切り替え時にエラーが起きる場合がある問題を修正
 * FIX: タイムライン上のアイコンが空白のまま表示されない場合がある問題を修正 (thx @5px!)
 * FIX: アカウント追加時の初回認証に失敗する問題を修正 (thx @polka_roco_!)
 * FIX: ツールバー上のAPIレートリミット表示が正しく動作しなくなった問題を修正
 * FIX: ツイタマなど一部のTwitterクライアントから投稿されたツイートの改行が正しく表示されない問題を修正 (thx @ohta8801, @kossetsu_inryo!)
 * FIX: プロフィール編集画面で入力した <, > などの記号が保持されない問題を修正 (thx @cn!)

==== Ver 1.0.9-beta1(2013/02/08)
 * ベータ版です
 * 使用中に不具合が起きた場合は #OpenTween かメールで遠慮なく報告して下さい

 * NEW: .NET Framework 4.0 Client Profile での動作に対応 (今後Full版のインストールは不要になります)
 * NEW: メニューに Twitter API の稼働状況ページへのリンクを追加
 * CHG: アイコンのキャッシュ機構を全面的に書き直し
 * CHG: アイコンの取得先をHTTPSを使用するURLに変更
 * FIX: 96dpiの環境で発言詳細欄のアイコンが等倍に表示されるようにサイズ調整 (thx @5px!)
 * FIX: サムネイル表示の2枚目以降の画像が正しいサイズで表示されない不具合を修正
 * FIX: 発言詳細欄に表示したツイートに含まれるURLへ無差別にHEADリクエストを飛ばす問題を修正
 * FIX: 言語設定が英語の状態でコンテキストメニューの「削除 (&D)」が翻訳されずに表示される問題を修正

==== Ver 1.0.8(2013/01/21)
 * v1.0.7 のみに存在する、アニメーションGifのサムネイル表示に関連した重要な修正を含んでいます
