@@ -1,6 +1,7 @@
 ﻿更新履歴
 
 ==== Ver 1.1.2-beta1(2013/xx/xx)
+ * FIX: Twitpic, yfrog, img.ly に画像をアップロードすることができない問題を修正
 
 ==== Ver 1.1.1(2013/06/11)
  * 当バージョンから Twitter API v1.1 に対応しています
